[package]
name = "restorable"
version = "0.1.0"
authors = ["Sanjeet N. Dasharath <sanjeetdasharath@gmail.com>"]
description = "An iterator adapter for saving and restoring iterator state"
license = "MIT OR Apache-2.0"
repository = "https://github.com/BlueBlazin/restorable"
keywords = ["iterator adapter", "save", "restore"]
categories = ["data-structures"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
